--- a/documentation/application/application-notifications.asciidoc
+++ b/documentation/application/application-notifications.asciidoc
@@ -23,7 +23,7 @@ type, and displays it in the current page.
 ----
 Notification.show("This is the caption",
                   "This is the description",
-                  Notification.Type.WARNING_MESSAGE);
+                  Notification.Type.HUMANIZED_MESSAGE);
 ----
 
 [[figure.notification.example1]]
@@ -39,8 +39,8 @@ in a [classname]#Page#, typically the current page.
 [source, java]
 ----
 new Notification("This is a warning",
-    "<br/>This is the <i>last</i> warning",
-    Notification.TYPE_WARNING_MESSAGE, true)
+    "This is the <i>last</i> warning",
+    Notification.Type.WARNING_MESSAGE, true)
     .show(Page.getCurrent());
 ----
 
